5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1846_2602.log
== TEST (2019-06-22 17:24:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 17:57:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1.4],[1,2,0],[2,3,2]])
quantidades = quantidades.T
p = dot(inv(quantidade), v)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 17:57:57) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1.4],[1,2,0],[2,3,2]])
quantidade = quantidade.T
p = dot(inv(quantidade), v)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 17:58:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1.4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 17:58:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1.4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 17:59:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1.4],[1,2,0],[2,3,2]])


print(v)
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:03:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1.4],[1,2,0],[2,3,2]])


print(v)
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:04:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])


print(v)
print(quantidade)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:05:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1.4],[1,2,0],[2,3,2]])


p = dot(inv(quantidade), v.T)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:05:28) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1.4],[1,2,0],[2,3,2]])


p = dot(inv(quantidade), v.T)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:05:33) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])


p = dot(inv(quantidade), v.T)
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:35:25) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == max(p):
	print("estafilococo:")
elif	p[1] == max[p]:
		print("salmonela:")
else:
		print("coli:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:36:00) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == max(p):
	print("estafilococo:")
elif	p[1] == max[p]:
		print("salmonela:")
else:
		print("coli:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 18:36:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == max(p):
	print("estafilococo:")
elif	p[1] == max[p]:
		print("salmonela:")
else:
		print("coli:")
-- EXECUTION TIME:
1.02371
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
estafilococo:
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
estafilococo:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:37:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == min(p):
	print("estafilococo:")
elif	p[1] == min[p]:
		print("salmonela:")
else:
		print("coli:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:39:49) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == max(p):
	print("estafilococo:")
elif	p[1] == max[p]:
		print("salmonela:")
else:
		print("coli:")
		
print(min(p))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:40:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == min(p):
	print("estafilococo:")
elif	p[1] == min[p]:
		print("salmonela:")
else:
		print("coli:")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:41:43) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == min(p):
	print("estafilococo:")
elif	p[1] == max[p]:
		print("salmonela:")
else:
		print("coli:")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 18:42:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == min(p):
	print("estafilococo:")
elif	p[1] == min[p]:
		print("salmonela:")
else:
		print("coli:")
		

-- EXECUTION TIME:
1.06796
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 13, in <module>
    elif	p[1] == min[p]:
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:42:54) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == min(p):
	print("estafilococo:")
elif	p[1] == min[p]:
		print("salmonela:")
else:
		print("coli:")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:45:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == min(p):
	print("estafilococo:")
if	p[1] == min[p]:
		print("salmonela:")
else:
		print("coli:")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:45:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == min(p):
	print("estafilococo:")
	elif	p[1] == min[p]:
			print("salmonela:")
	else:
			print("coli:")
		

-- ERROR:
File "XXXX", line 13
    elif	p[1] == min[p]:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:47:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if preco[0] == min(p):
    print("estafilococo")
elif preco[1] == min(p):
    print("salmonela")
else:
    print("cali")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 18:47:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if p[0] == min(p):
    print("estafilococo")
elif p[1] == min(p):
    print("salmonela")
else:
    print("cali")
-- EXECUTION TIME:
1.19217
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
cali
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
salmonela
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 18:48:04) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if p[0] == min(p):
    print("estafilococo")
elif p[1] == min(p):
    print("salmonela")
else:
    print("coli")
-- EXECUTION TIME:
0.783454
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:50:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == min(p):
	print("estafilococo:")
elif	p[1] == min[p]:
		print("salmonela:")
else:
		print("coli:")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 18:50:08) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == min(p):
	print("estafilococo:")
elif	p[1] == min[p]:
		print("salmonela:")
else:
		print("coli:")
-- EXECUTION TIME:
1.04104
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 13, in <module>
    elif	p[1] == min[p]:
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 18:51:07) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == min(p):
	print("estafilococo")
elif	p[1] == min[p]:
		print("salmonela")
else:
		print("coli")
		

-- EXECUTION TIME:
1.1763
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 13, in <module>
    elif	p[1] == min[p]:
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 18:51:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == min(p):
	print("estafilococo:")
elif	p[1] == min[p]:
		print("salmonela:")
else:
		print("coli:")
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 18:51:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == min(p):
	print("estafilococo:")
elif	p[1] == min[p]:
		print("salmonela:")
else:
		print("coli:")
		

-- EXECUTION TIME:
0.949452
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 13, in <module>
    elif	p[1] == min[p]:
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 18:52:12) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == min(p):
	print("estafilococo ")
elif	p[1] == min[p]:
		print("salmonela ")
else:
		print("coli ")
		

-- EXECUTION TIME:
1.24896
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 13, in <module>
    elif	p[1] == min[p]:
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 18:52:42) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == min(p):
	print("estafilococo")
elif	p[1] == min[p]:
		print("salmonela")
else:
		print("coli")
-- EXECUTION TIME:
1.12464
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/2602/main.py", line 13, in <module>
    elif	p[1] == min[p]:
TypeError: 'builtin_function_or_method' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 18:53:27) 
-- CODE:
from numpy import *
from numpy.linalg import *
v = array(eval(input(" Digite as quantidades: ")))
quantidade =  array([[2,1,4],[1,2,0],[2,3,2]])

p = dot(inv(quantidade), v.T)
print("estafilococo:",round(p[0],1))
print("salmonela:",round(p[1],1))
print("coli:",round(p[2],1))

if	p[0] == min(p):
	print("estafilococo")
elif	p[1] == min(p):
		print("salmonela")
else:
		print("coli")
-- EXECUTION TIME:
1.15024
-- TEST CASE 1:
---- input:
[3955.25,5652.36,8562.22]
---- correct output:
estafilococo:  1923.4
salmonela:  1864.5
coli:  -439.0
coli
---- user output:
estafilococo: 1923.4
salmonela: 1864.5
coli: -439.0
coli
-- TEST CASE 2:
---- input:
[2095.52,1855.75,11295.21]

---- correct output:
estafilococo:  -31711.0
salmonela:  16783.4
coli:  12183.6
estafilococo

---- user output:
estafilococo: -31711.0
salmonela: 16783.4
coli: 12183.6
estafilococo
-- TEST CASE 3:
---- input:
[8596.14,3212.68,2652.11]
---- correct output:
estafilococo:  22647.2
salmonela:  -9717.3
coli:  -6745.3
salmonela

---- user output:
estafilococo: 22647.2
salmonela: -9717.3
coli: -6745.3
salmonela
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
